# cw-template

./: .gitignore  Cargo.toml  Makefile.toml  README.md  justfile  rustfmt.toml
.github/workflows/: rust.yaml  wasm.yaml
contracts/hub/: Cargo.toml  README.md
contracts/hub/examples/: schema.rs
contracts/hub/schema/: steak-hub.json
contracts/hub/src/: contract.rs  error.rs  execute.rs  lib.rs  query.rs  state.rs
contracts/hub/tests/: tests.rs
contracts/my-contract/: Cargo.toml  README.md
contracts/my-contract/examples/: schema.rs
contracts/my-contract/src/: lib.rs
schemas/: steak-hub.json
